--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -13,5 +13,13 @@
 		<url-pattern>/jsp/common/LoginServlet</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>LogOutServlet</servlet-name>
+		<servlet-class>servlet.LogOutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogOutServlet</servlet-name>
+		<url-pattern>/jsp/common/LogOutServlet</url-pattern>
+	</servlet-mapping>
 	
 </web-app>
