--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -31,4 +31,12 @@
 		<url-pattern>/jsp/hazelab/TweetServlet</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>SettingServlet</servlet-name>
+		<servlet-class>servlet.SettingServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SettingServlet</servlet-name>
+		<url-pattern>/jsp/hazelab/SettingServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
