--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -40,4 +40,13 @@
 		<servlet-name>UploadServlet</servlet-name>
 		<url-pattern>/jsp/hazelab/UploadServlet</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>GetSlideServlet</servlet-name>
+		<servlet-class>servlet.GetSlideServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetSlideServlet</servlet-name>
+		<url-pattern>/jsp/hazelab/GetSlideServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
