--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -58,4 +58,13 @@
 		<servlet-name>ViewSlideServlet</servlet-name>
 		<url-pattern>/jsp/hazelab/ViewSlideServlet</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>GetTweetServlet</servlet-name>
+		<servlet-class>servlet.GetTweetServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetTweetServlet</servlet-name>
+		<url-pattern>/jsp/hazelab/GetTweetServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
