--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -59,4 +59,13 @@
 		<url-pattern>/jsp/hazelab/ViewSlideServlet</url-pattern>
 	</servlet-mapping>
 	
+		<servlet>
+		<servlet-name>GetUserTweetServlet</servlet-name>
+		<servlet-class>servlet.GetUserTweetServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetUserTweetServlet</servlet-name>
+		<url-pattern>/jsp/hazelab/GetUserTweetServlet</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
