--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -84,7 +84,6 @@
 	<servlet-mapping>
 		<servlet-name>MoveTopServlet</servlet-name>
 		<url-pattern>/jsp/hazelab/MoveTopServlet</url-pattern>
-<<<<<<< HEAD
 	</servlet-mapping>
 
 	<servlet>
@@ -92,32 +91,7 @@
 		<servlet-class>servlet.RegistSlideServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>RegistWindowsServlet</servlet-name>
+		<servlet-name>RegistSlideServlet</servlet-name>
 		<url-pattern>/jsp/hazelab/RegistSlideServlet</url-pattern>
 	</servlet-mapping>
-
-
 </web-app>
-=======
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>RegistWindowsSlideServlet</servlet-name>
-		<servlet-class>servlet.RegistWindowsSlideServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>RegistWindowsSlideServlet</servlet-name>
-		<url-pattern>/jsp/hazelab/RegistWindowsSlideServlet</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>RegistMacSlideServlet</servlet-name>
-		<servlet-class>servlet.RegistMacSlideServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>RegistMacSlideServlet</servlet-name>
-		<url-pattern>/jsp/hazelab/RegistMacSlideServlet</url-pattern>
-	</servlet-mapping>
-
-</web-app>
->>>>>>> cac31ef3a56a08221ee0d7b778ca89ff125a7a5f
