--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ dist/
 slide/
 avator/
 WEB-INF/src/utility/HostPathComponent.java
+WEB-INF/src/utility/DriverAccessor.java
+WEB-INF/src/utility/DriverAccessor_Hazelab.java
