--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ work/
 .project
 .DS_Store
 WEB-INF/classes/
+.settings/
+.cvsignore
+.tomcatplugin
 
 ## future remove
 WEB-INF/src/utility/HostPathComponent.java
